[package]
name = "ak-web-dx"
version = "0.1.0"
authors = ["dorname <lgqfighting@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
reqwest = "0.12.5"
tokio = {version = "1.38.0",features = ["full"]}
chrono = "0.4.38"
serde = "1.0.204"
serde_with = "3.8.3"
serde_json = "1.0.120"
